# compilers-lab2

./: .gitignore  CMakeLists.txt
graphviz/: graph.dot  words.dot
include/: Graph.h  GraphToDOT.h
include/grammar/: Grammar.h  GrammarException.h  JsonBuilder.h  Option.h  Production.h  ProductionPart.h  Symbol.h  algorithm.h
report/: DeleteRecursion.txt  FactoringOutput1.txt  RemoveBarrenSymbol.txt  RemoveDummySymbol.txt  RemoveUnrechebleSymbol.txt
src/: CMakeLists.txt  RegexExceptions.cpp
src/grammar/: Grammar.cpp  GrammarException.cpp  GraphToDOT.cpp  JsonBuilder.cpp  Production.cpp  ProductionPart.cpp  Symbol.cpp  algorithm.cpp
tests/: CMakeLists.txt
tests/src/: GrammarTest.cpp  LeftFactorisationTest.cpp  ProductionPartTest.cpp  SymbolTest.cpp  algorithmTest.cpp  leftFactoringTest.cpp
